modificação no titulo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="container">
       <div id="profile">
         <img src="./assets/The-Cult-Dreamtime.jpg.jpg" alt="Imagem-mayke-brito" />
-        <p>@AlexGon</p>
+        <p>@AlexGond</p>
       </div>
       <div id="switch" ondblclick="toggleMode()">
           <button>
