--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/The-Cult-Dreamtime.jpg.jpg" alt="Imagem-mayke-brito" />
+        <img src="./assets/luz.jpeg" alt="Imagem-mayke-brito" />
         <p>@AlexGond</p>
       </div>
       <div id="switch" ondblclick="toggleMode()">
@@ -40,19 +40,19 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href="http://github.com/alexYAHKO" target="_blank">
+        <a href="#" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="http://instagram.com" target="_blank">
+        <a href="#" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="http://youtube.com" target="_blank">
+        <a href="#" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
 
-        <a href="https://linkedin.com" target="_blank">
+        <a href="#" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
